<resources>
    <string name="app_name">三只松鼠_Demo</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">分类</string>
    <string name="notification">通知</string>
    <string name="title_profile">我的</string>
    <string name="simple_view_behavior">com.szss.androidapp.common.view.SimpleViewBehavior</string>
    <string name="translate_up_down_behavior">com.szss.androidapp.common.view.TranslateUpDownBehavior</string>
    <string name="login">登录</string>
    <string name="regiest">注册</string>
    <string name="username_email">用户名/邮箱</string>
    <string name="password">密码</string>
    <string name="login_with_qq">用 QQ 登录</string>
    <string name="login_with_weixin">用 WeChat 登录</string>
    <string name="or">或</string>
    <string name="forget_password">忘记密码</string>
    <string name="go_start">开始使用</string>
    <string name="loading">Loading...</string>
    <string name="appname">三只松鼠-demo</string>
    <string name="setting">设置</string>
    <string name="message">消息</string>
    <string name="subject">专题</string>
    <string name="start_learn">开始体验</string>
    <string name="gold">金币</string>
    <string name="sui_yingzi">碎银子</string>
    <string name="integral">积分</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="settings_about">关于</string>
    <string name="settings_policy">隐私政策</string>
    <string name="settings_license">许可协议</string>
    <string name="settings_version">版本号</string>

</resources>
